<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp" />

        <TextView
            android:id="@+id/loadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loading_text"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/loadingDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/loading_details_worlds"
            android:textAlignment="center"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|top"
        android:orientation="vertical"
        android:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dip"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:clickable="true"
                android:drawableEnd="@android:drawable/arrow_down_float"
                android:ellipsize="end"
                android:gravity="start|center_vertical"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textSize="18sp"
                android:tooltipText="@string/main_world_selector_tooltip" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingTop="36dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fromText"
                        android:layout_width="48dp"
                        android:layout_height="60sp"
                        android:gravity="start|center_vertical"
                        android:labelFor="@id/fromInput"
                        android:text="@string/main_from_text"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <ListView
                        android:id="@+id/fromInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </ListView>

                    <TextView
                        android:id="@+id/fromInputEmpty"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableEnd="@android:drawable/ic_menu_edit"
                        android:gravity="start|center_vertical"
                        android:text="@string/main_input_from_hint"
                        android:textSize="17sp"
                        tools:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/toText"
                        android:layout_width="48dp"
                        android:layout_height="60sp"
                        android:gravity="start|center_vertical"
                        android:labelFor="@id/toInput"
                        android:text="@string/main_to_text"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <ListView
                        android:id="@+id/toInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/toInputEmpty"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableEnd="@android:drawable/ic_menu_edit"
                        android:gravity="start|center_vertical"
                        android:text="@string/main_input_to_hint"
                        android:textSize="17sp"
                        tools:visibility="gone" />

                </LinearLayout>

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/main_submit_button" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/toolbar_dropshadow" />
        </FrameLayout>

    </LinearLayout>
</RelativeLayout>